--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-anything
+Github Tutorial
+Hello, my name is Austin. I was born in Newark, NY and moved to Elmira, NY when I was 10 years old. I went to Elmira High School and was a member of the VEX robotics team. Some of my hobbies include hanging out with friends, playing video games, and taking naps. I knew I wanted to go to RIT since freshman year of high school and it was the only college I applied to.
+https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.simplyjillicious.com%2Fhealthy-single-serve-cookie-recipe-gluten-free%2F&psig=AOvVaw0fDzRtswlgPmNcXBEBODWD&ust=1727999447103000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJCnxdzx8IgDFQAAAAAdAAAAABAE
