--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> Github Tutorial </h1>
-<p> Hello, my name is Austin. I was born in Newark, NY and moved to Elmira, NY when I was 10 years old. I went to Elmira High School and was a member of the VEX robotics team. Some of my hobbies include hanging out with friends, playing video games, and taking naps. I knew I wanted to go to RIT since freshman year of high school and it was the only college I applied to.<\p>
-<a href="https://www.rit.edu/computing/department-software-engineering">RIT SE Website<\a>
+<p> Hello, my name is Austin. I was born in Newark, NY and moved to Elmira, NY when I was 10 years old. I went to Elmira High School and was a member of the VEX robotics team. Some of my hobbies include hanging out with friends, playing video games, and taking naps. I knew I wanted to go to RIT since freshman year of high school and it was the only college I applied to.</p>
+<a href="https://www.rit.edu/computing/department-software-engineering">RIT SE Website</a>
 <img src="https://e7.pngegg.com/pngimages/97/406/png-clipart-cookie-illustration-chocolate-chip-cookie-bakery-baking-soft-cookies-baked-goods-food-thumbnail.png" alt="Cookie">
 <ul>
   <li> Github</li>
