footer and post logic

--- a/tigergoodbuy/index.html
+++ b/tigergoodbuy/index.html
@@ -16,7 +16,24 @@
         <button class="tigerButton" id="cartButton">Cart</button>
         <button class="tigerButton" id="logOutButton">Log Out</button>
     </header>
+
     <h1>For You</h1>
+    <div class="miniPostList" id="forYouPosts">
+
+    </div>
     <h1>New Items</h1>
+    <div class="miniPostList" id="newItemsPosts">
+
+    </div>
+
+    <script src="post.js"></script>
+
+    <footer>
+        <button class="tigerButton">Home</button>
+        <button class="tigerButton">Search</button>
+        <button class="tigerButton">Message</button>
+        <button class="tigerButton">Post & Edit</button>
+        <button class="tigerButton">Profile & Stats</button>
+    </footer>
 </body>
 </html>
