--- a/tigergoodbuy/new_post/index.html
+++ b/tigergoodbuy/new_post/index.html
@@ -19,10 +19,20 @@
 
     <h1>New Post</h1>
     <form id="newPostForm">
-        <img id="newPostImg">
-        <input type="number" min="0" step="0.01" id="price" required><br>
-        <input type="text" id="name" required><br>
-        <input type="text" id="desc" required><br>
+        <div id="newPostFormDiv">
+            <div id="newPostLeft">
+                <img id="newPostImg" src="../img/banana.jpg">
+                <input type="number" min="0" step="0.01" id="priceInput" placeholder="Price" required><br>
+            </div>
+
+            <div id="newPostRight">
+                <input type="text" id="nameInput" placeholder="Name" required><br>
+                <input type="text" id="imageLink" placeholder="Image Link"><br>
+                <textarea id="descInput" placeholder="Description & Notes" rows="4" cols="50" required></textarea><br>
+            </div>
+        </div>
+        
+        <button type="submit" id="newPostSubmit" class="tigerButton">Goodbuy!</button>
     </form>
 
     <footer>
@@ -33,6 +43,6 @@
         <button class="tigerButton">Profile & Stats</button>
     </footer>
 
-    <script src="loadPosts.js" type="module"></script>
+    <script src="newPost.js" type="module"></script>
 </body>
 </html>
