--- a/tigergoodbuy/home/index.html
+++ b/tigergoodbuy/home/index.html
@@ -8,32 +8,23 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Tiger Goodbuy - New Post</title>
+    <title>Tiger Goodbuy - Home</title>
 </head>
 <body>
     <header>
-        <a href="../home"><button class="tigerButton" id="logoButton">Tiger Goodbuy</button></a>
+        <a href="index.html"><button class="tigerButton" id="logoButton">Tiger Goodbuy</button></a>
         <button class="tigerButton" id="cartButton">Cart</button>
         <button class="tigerButton" id="logOutButton">Log Out</button>
     </header>
 
-    <h1>New Post</h1>
-    <form id="newPostForm">
-        <div id="newPostFormDiv">
-            <div id="newPostLeft">
-                <img id="newPostImg" src="../img/banana.jpg">
-                <input type="number" min="0" step="0.01" id="priceInput" placeholder="Price" required><br>
-            </div>
+    <h1>For You</h1>
+    <div class="miniPostList" id="forYouPosts">
 
-            <div id="newPostRight">
-                <input type="text" id="nameInput" placeholder="Name" required><br>
-                <input type="text" id="imageLink" placeholder="Image Link"><br>
-                <textarea id="descInput" placeholder="Description & Notes" rows="4" cols="50" required></textarea><br>
-            </div>
-        </div>
-        
-        <button type="submit" id="newPostSubmit" class="tigerButton">Goodbuy!</button>
-    </form>
+    </div>
+    <h1>New Items</h1>
+    <div class="miniPostList" id="newItemsPosts">
+
+    </div>
 
     <footer>
         <button class="tigerButton">Home</button>
@@ -43,6 +34,6 @@
         <button class="tigerButton">Profile & Stats</button>
     </footer>
 
-    <script src="newPost.js" type="module"></script>
+    <script src="loadPosts.js" type="module"></script>
 </body>
 </html>
