search, mobile support, for you posts, and more

--- a/tigergoodbuy/index.html
+++ b/tigergoodbuy/index.html
@@ -6,6 +6,6 @@
     <title>Tiger Goodbuy</title>
 </head>
 <body>
-    <p><a href="http://example.com/">Redirect</a></p>
+    <p><a href="./home">Redirect</a></p>
 </body>
 </html>
