--- a/tigergoodbuy/search/index.html
+++ b/tigergoodbuy/search/index.html
@@ -11,12 +11,18 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Tiger Goodbuy - Home</title>
+
+    <title>Tiger Goodbuy - Search</title>
 </head>
 <body>
     <header>
         <div class="headerLeft">
-            <a href="../home"><button class="tigerButton" id="logoButton">Tiger Goodbuy</button></a>
+            <form id="searchForm">
+                <div class="tigerButton">
+                    <button type="submit"><img src="../img/search.png"></button>
+                    <input type="text" id="searchQuery" value="" placeholder="Search">
+                </div>
+            </form>
         </div>
 
         <div class="headerRight">
@@ -25,24 +31,20 @@
         </div>
     </header>
 
-    <h1>For You</h1>
-    <div class="miniPostList" id="forYouPosts">
+    <h1>Best Results</h1>
 
-    </div>
-
-    <h1>New Items</h1>
-    <div class="miniPostList" id="newItemsPosts">
-
+    <div id="postResults">
     </div>
 
     <footer>
-        <a href="../home"><button class="tigerButton tigerButtonSelected">Home</button></a>
-        <a href="../search"><button class="tigerButton">Search</button></a>
+        <a href="../home"><button class="tigerButton">Home</button></a>
+        <a href="../search"><button class="tigerButton tigerButtonSelected">Search</button></a>
         <button class="tigerButton">Message</button>
         <a href="../new_post"><button class="tigerButton">Post & Edit</button></a>
         <button class="tigerButton">Profile & Stats</button>
     </footer>
 
-    <script src="loadPosts.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
+    <script src="search.js" type="module"></script>
 </body>
 </html>
