--- a/tigergoodbuy/new_post/index.html
+++ b/tigergoodbuy/new_post/index.html
@@ -2,19 +2,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../style.css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    </style>
+    <link rel="stylesheet" href="../style.css">
+
     <title>Tiger Goodbuy - New Post</title>
 </head>
 <body>
     <header>
-        <a href="../home"><button class="tigerButton" id="logoButton">Tiger Goodbuy</button></a>
-        <button class="tigerButton" id="cartButton">Cart</button>
-        <button class="tigerButton" id="logOutButton">Log Out</button>
+        <div class="headerLeft">
+            <a href="../home"><button class="tigerButton" id="logoButton">Tiger Goodbuy</button></a>
+        </div>
+
+        <div class="headerRight">
+            <button class="tigerButton" id="cartButton"><img src="../img/cart.png"></button>
+            <button class="tigerButton" id="logOutButton">Log Out</button>
+        </div>
     </header>
 
     <h1>New Post</h1>
@@ -28,7 +39,10 @@
             <div id="newPostRight">
                 <input type="text" id="nameInput" placeholder="Name" required><br>
                 <input type="text" id="imageLink" placeholder="Image Link"><br>
-                <textarea id="descInput" placeholder="Description & Notes" rows="4" cols="50" required></textarea><br>
+                <div id="quillWrapper">
+                    <div id="quill-editor"></div>
+                </div>
+                <textarea id="descInput" placeholder="Description & Notes" rows="4" cols="50" required class="quill-editor" style="display:none;"></textarea><br>
             </div>
         </div>
         
@@ -36,13 +50,14 @@
     </form>
 
     <footer>
-        <button class="tigerButton">Home</button>
-        <button class="tigerButton">Search</button>
+        <a href="../home"><button class="tigerButton">Home</button></a>
+        <a href="../search"><button class="tigerButton">Search</button></a>
         <button class="tigerButton">Message</button>
-        <button class="tigerButton">Post & Edit</button>
+        <a href="../new_post"><button class="tigerButton tigerButtonSelected">Post & Edit</button></a>
         <button class="tigerButton">Profile & Stats</button>
     </footer>
 
+    <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
     <script src="newPost.js" type="module"></script>
 </body>
 </html>
