--- a/tigergoodbuy/home/index.html
+++ b/tigergoodbuy/home/index.html
@@ -20,8 +20,8 @@
         </div>
 
         <div class="headerRight">
-            <button class="tigerButton" id="cartButton"><img src="../img/cart.png"></button>
-            <button class="tigerButton" id="logOutButton">Log Out</button>
+            <button class="tigerButton tigerNotWorking" id="cartButton"><img src="../img/cart.png"></button>
+            <button class="tigerButton tigerNotWorking" id="logOutButton">Log Out</button>
         </div>
     </header>
 
@@ -38,9 +38,9 @@
     <footer>
         <a href="../home"><button class="tigerButton tigerButtonSelected">Home</button></a>
         <a href="../search"><button class="tigerButton">Search</button></a>
-        <button class="tigerButton">Message</button>
+        <a><button class="tigerButton tigerNotWorking">Message</button></a>
         <a href="../new_post"><button class="tigerButton">Post & Edit</button></a>
-        <button class="tigerButton">Profile & Stats</button>
+        <a><button class="tigerButton tigerNotWorking">Profile & Stats</button></a>
     </footer>
 
     <script src="loadPosts.js" type="module"></script>
