--- a/tigergoodbuy/new_post/index.html
+++ b/tigergoodbuy/new_post/index.html
@@ -23,8 +23,8 @@
         </div>
 
         <div class="headerRight">
-            <button class="tigerButton" id="cartButton"><img src="../img/cart.png"></button>
-            <button class="tigerButton" id="logOutButton">Log Out</button>
+            <button class="tigerButton tigerNotWorking" id="cartButton"><img src="../img/cart.png"></button>
+            <button class="tigerButton tigerNotWorking" id="logOutButton">Log Out</button>
         </div>
     </header>
 
@@ -52,9 +52,9 @@
     <footer>
         <a href="../home"><button class="tigerButton">Home</button></a>
         <a href="../search"><button class="tigerButton">Search</button></a>
-        <button class="tigerButton">Message</button>
+        <a><button class="tigerButton tigerNotWorking">Message</button></a>
         <a href="../new_post"><button class="tigerButton tigerButtonSelected">Post & Edit</button></a>
-        <button class="tigerButton">Profile & Stats</button>
+        <a><button class="tigerButton tigerNotWorking">Profile & Stats</button></a>
     </footer>
 
     <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
