--- a/tigergoodbuy/message/index.html
+++ b/tigergoodbuy/message/index.html
@@ -11,7 +11,8 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>Tiger Goodbuy - New Post</title>
+
+    <title>Tiger Goodbuy - Message</title>
 </head>
 <body>
     <header>
@@ -25,28 +26,20 @@
         </div>
     </header>
 
-    <h1 id="nameText">Post</h1>
-    <div id="newPostFormDiv">
-        <div id="newPostLeft">
-            <img id="newPostImg">
-            <p id="priceText"></p>
-        </div>
+    <h1>Messages</h1>
 
-        <div id="newPostRight">
-            <p id="sellerText">Seller: [Seller Name]</p>
-            <p id="dateText"></p>
-            <p id="descText"></p>
-        </div>
+    <div id="postResults">
     </div>
 
     <footer>
         <a href="../home"><button class="tigerButton">Home</button></a>
         <a href="../search"><button class="tigerButton">Search</button></a>
-        <a href="../message"><button class="tigerButton">Message</button></a>
+        <a href="../message"><button class="tigerButton tigerButtonSelected">Message</button></a>
         <a href="../new_post"><button class="tigerButton">Post & Edit</button></a>
         <a><button class="tigerButton tigerNotWorking">Profile & Stats</button></a>
     </footer>
-
-    <script src="getBigPost.js" type="module"></script>
+<!-- 
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.min.js"></script>
+    <script src="search.js" type="module"></script> -->
 </body>
 </html>
