--- a/tigergoodbuy/search/index.html
+++ b/tigergoodbuy/search/index.html
@@ -39,7 +39,7 @@
     <footer>
         <a href="../home"><button class="tigerButton">Home</button></a>
         <a href="../search"><button class="tigerButton tigerButtonSelected">Search</button></a>
-        <a><button class="tigerButton tigerNotWorking">Message</button></a>
+        <a href="../message"><button class="tigerButton">Message</button></a>
         <a href="../new_post"><button class="tigerButton">Post & Edit</button></a>
         <a><button class="tigerButton tigerNotWorking">Profile & Stats</button></a>
     </footer>
