--- a/tigergoodbuy/home/index.html
+++ b/tigergoodbuy/home/index.html
@@ -27,12 +27,12 @@
 
     <h1>For You</h1>
     <div class="miniPostList" id="forYouPosts">
-
+        <!-- random posts go here -->
     </div>
 
     <h1>New Items</h1>
     <div class="miniPostList" id="newItemsPosts">
-
+        <!-- new posts go here -->
     </div>
 
     <footer>
