--- a/tigergoodbuy/index.html
+++ b/tigergoodbuy/index.html
@@ -6,6 +6,7 @@
     <title>Tiger Goodbuy</title>
 </head>
 <body>
+    <!-- redirect user to home page, ideally automatically -->
     <p><a href="./home">Redirect</a></p>
 </body>
 </html>
