--- a/tigergoodbuy/new_post/index.html
+++ b/tigergoodbuy/new_post/index.html
@@ -39,7 +39,7 @@
             <div id="newPostRight">
                 <input type="text" id="nameInput" placeholder="Name" required><br>
                 <input type="text" id="imageLink" placeholder="Image Link"><br>
-                <div id="quillWrapper">
+                <div id="quillWrapper"> <!-- for quill rich text editor (so cool) -->
                     <div id="quill-editor"></div>
                 </div>
                 <textarea id="descInput" placeholder="Description & Notes" rows="4" cols="50" required class="quill-editor" style="display:none;"></textarea><br>
